--- a/Monetrix/Views/AppUser/Index.cshtml
+++ b/Monetrix/Views/AppUser/Index.cshtml
@@ -33,8 +33,8 @@
                     <td>@user.Salary.ToString("C")</td>
                     <td>@user.HireDate.ToString("yyyy-MM-dd")</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-warning">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-sm btn-info">Details</a> |
+                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-warning">Edit</a>
+                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-sm btn-info">Details</a>
                         <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
